src/main/java/frontend/SysY2022Parser.java
// Generated from java-escape by ANTLR 4.11.1
package frontend;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SysY2022Parser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, IntConst = 34, FloatConst = 35, Ident = 36, STRING = 37, LINE_COMMENT = 38,
            COMMENT = 39, WS = 40;
    public static final int
            RULE_compUnit = 0, RULE_decl = 1, RULE_constDecl = 2, RULE_bType = 3,
            RULE_constDef = 4, RULE_constInitVal = 5, RULE_varDecl = 6, RULE_varDef = 7,
            RULE_initVal = 8, RULE_funcDef = 9, RULE_funcType = 10, RULE_funcFParams = 11,
            RULE_funcFParam = 12, RULE_block = 13, RULE_blockItem = 14, RULE_stmt = 15,
            RULE_exp = 16, RULE_cond = 17, RULE_lVal = 18, RULE_primaryExp = 19, RULE_number = 20,
            RULE_unaryExp = 21, RULE_unaryOp = 22, RULE_funcRParams = 23, RULE_funcRParam = 24,
            RULE_mulExp = 25, RULE_addExp = 26, RULE_relExp = 27, RULE_eqExp = 28,
            RULE_lAndExp = 29, RULE_lOrExp = 30, RULE_constExp = 31;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public SysY2022Parser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "compUnit", "decl", "constDecl", "bType", "constDef", "constInitVal",
                "varDecl", "varDef", "initVal", "funcDef", "funcType", "funcFParams",
                "funcFParam", "block", "blockItem", "stmt", "exp", "cond", "lVal", "primaryExp",
                "number", "unaryExp", "unaryOp", "funcRParams", "funcRParam", "mulExp",
                "addExp", "relExp", "eqExp", "lAndExp", "lOrExp", "constExp"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'const'", "','", "';'", "'int'", "'float'", "'='", "'['", "']'",
                "'{'", "'}'", "'('", "')'", "'void'", "'if'", "'else'", "'while'", "'break'",
                "'continue'", "'return'", "'+'", "'-'", "'!'", "'*'", "'/'", "'%'", "'<'",
                "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, "IntConst",
                "FloatConst", "Ident", "STRING", "LINE_COMMENT", "COMMENT", "WS"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "java-escape";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final CompUnitContext compUnit() throws RecognitionException {
        CompUnitContext _localctx = new CompUnitContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_compUnit);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((_la) & ~0x3f) == 0 && ((1L << _la) & 8242L) != 0) {
                    {
                        setState(66);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                            case 1: {
                                setState(64);
                                decl();
                            }
                            break;
                            case 2: {
                                setState(65);
                                funcDef();
                            }
                            break;
                        }
                    }
                    setState(70);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(71);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DeclContext decl() throws RecognitionException {
        DeclContext _localctx = new DeclContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_decl);
        try {
            setState(75);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__0:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(73);
                    constDecl();
                }
                break;
                case T__3:
                case T__4:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(74);
                    varDecl();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConstDeclContext constDecl() throws RecognitionException {
        ConstDeclContext _localctx = new ConstDeclContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_constDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(77);
                match(T__0);
                setState(78);
                bType();
                setState(79);
                constDef();
                setState(84);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__1) {
                    {
                        {
                            setState(80);
                            match(T__1);
                            setState(81);
                            constDef();
                        }
                    }
                    setState(86);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(87);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BTypeContext bType() throws RecognitionException {
        BTypeContext _localctx = new BTypeContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_bType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(89);
                _la = _input.LA(1);
                if (!(_la == T__3 || _la == T__4)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConstDefContext constDef() throws RecognitionException {
        ConstDefContext _localctx = new ConstDefContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_constDef);
        int _la;
        try {
            setState(106);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                case 1:
                    _localctx = new ScalarConstDefContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(91);
                    match(Ident);
                    setState(92);
                    match(T__5);
                    setState(93);
                    constInitVal();
                }
                break;
                case 2:
                    _localctx = new ArrConstDefContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(94);
                    match(Ident);
                    setState(99);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(95);
                                match(T__6);
                                setState(96);
                                constExp();
                                setState(97);
                                match(T__7);
                            }
                        }
                        setState(101);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == T__6);
                    setState(103);
                    match(T__5);
                    setState(104);
                    constInitVal();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConstInitValContext constInitVal() throws RecognitionException {
        ConstInitValContext _localctx = new ConstInitValContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_constInitVal);
        int _la;
        try {
            setState(121);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__10:
                case T__19:
                case T__20:
                case T__21:
                case IntConst:
                case FloatConst:
                case Ident:
                    _localctx = new ScalarConstInitValContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(108);
                    constExp();
                }
                break;
                case T__8:
                    _localctx = new ArrConstInitValContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(109);
                    match(T__8);
                    setState(118);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (((_la) & ~0x3f) == 0 && ((1L << _la) & 120266426880L) != 0) {
                        {
                            setState(110);
                            constInitVal();
                            setState(115);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la == T__1) {
                                {
                                    {
                                        setState(111);
                                        match(T__1);
                                        setState(112);
                                        constInitVal();
                                    }
                                }
                                setState(117);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                    }

                    setState(120);
                    match(T__9);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VarDeclContext varDecl() throws RecognitionException {
        VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_varDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(123);
                bType();
                setState(124);
                varDef();
                setState(129);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__1) {
                    {
                        {
                            setState(125);
                            match(T__1);
                            setState(126);
                            varDef();
                        }
                    }
                    setState(131);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(132);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VarDefContext varDef() throws RecognitionException {
        VarDefContext _localctx = new VarDefContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_varDef);
        int _la;
        try {
            setState(152);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 13, _ctx)) {
                case 1:
                    _localctx = new ScalarVarDefContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(134);
                    match(Ident);
                    setState(137);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == T__5) {
                        {
                            setState(135);
                            match(T__5);
                            setState(136);
                            initVal();
                        }
                    }

                }
                break;
                case 2:
                    _localctx = new ArrVarDefContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(139);
                    match(Ident);
                    setState(144);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(140);
                                match(T__6);
                                setState(141);
                                constExp();
                                setState(142);
                                match(T__7);
                            }
                        }
                        setState(146);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == T__6);
                    setState(150);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == T__5) {
                        {
                            setState(148);
                            match(T__5);
                            setState(149);
                            initVal();
                        }
                    }

                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final InitValContext initVal() throws RecognitionException {
        InitValContext _localctx = new InitValContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_initVal);
        int _la;
        try {
            setState(167);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__10:
                case T__19:
                case T__20:
                case T__21:
                case IntConst:
                case FloatConst:
                case Ident:
                    _localctx = new ScalarInitValContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(154);
                    exp();
                }
                break;
                case T__8:
                    _localctx = new ArrInitvalContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(155);
                    match(T__8);
                    setState(164);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (((_la) & ~0x3f) == 0 && ((1L << _la) & 120266426880L) != 0) {
                        {
                            setState(156);
                            initVal();
                            setState(161);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la == T__1) {
                                {
                                    {
                                        setState(157);
                                        match(T__1);
                                        setState(158);
                                        initVal();
                                    }
                                }
                                setState(163);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                    }

                    setState(166);
                    match(T__9);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncDefContext funcDef() throws RecognitionException {
        FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_funcDef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(169);
                funcType();
                setState(170);
                match(Ident);
                setState(171);
                match(T__10);
                setState(173);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__3 || _la == T__4) {
                    {
                        setState(172);
                        funcFParams();
                    }
                }

                setState(175);
                match(T__11);
                setState(176);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncTypeContext funcType() throws RecognitionException {
        FuncTypeContext _localctx = new FuncTypeContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_funcType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(178);
                _la = _input.LA(1);
                if (!(((_la) & ~0x3f) == 0 && ((1L << _la) & 8240L) != 0)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncFParamsContext funcFParams() throws RecognitionException {
        FuncFParamsContext _localctx = new FuncFParamsContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_funcFParams);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(180);
                funcFParam();
                setState(185);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__1) {
                    {
                        {
                            setState(181);
                            match(T__1);
                            setState(182);
                            funcFParam();
                        }
                    }
                    setState(187);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncFParamContext funcFParam() throws RecognitionException {
        FuncFParamContext _localctx = new FuncFParamContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_funcFParam);
        int _la;
        try {
            setState(204);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 20, _ctx)) {
                case 1:
                    _localctx = new ScalarFuncFParamContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(188);
                    bType();
                    setState(189);
                    match(Ident);
                }
                break;
                case 2:
                    _localctx = new ArrFuncFParamContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(191);
                    bType();
                    setState(192);
                    match(Ident);
                    setState(193);
                    match(T__6);
                    setState(194);
                    match(T__7);
                    setState(201);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__6) {
                        {
                            {
                                setState(195);
                                match(T__6);
                                setState(196);
                                exp();
                                setState(197);
                                match(T__7);
                            }
                        }
                        setState(203);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_block);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(206);
                match(T__8);
                setState(210);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((_la) & ~0x3f) == 0 && ((1L << _la) & 120267426362L) != 0) {
                    {
                        {
                            setState(207);
                            blockItem();
                        }
                    }
                    setState(212);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(213);
                match(T__9);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BlockItemContext blockItem() throws RecognitionException {
        BlockItemContext _localctx = new BlockItemContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_blockItem);
        try {
            setState(217);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__0:
                case T__3:
                case T__4:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(215);
                    decl();
                }
                break;
                case T__2:
                case T__8:
                case T__10:
                case T__13:
                case T__15:
                case T__16:
                case T__17:
                case T__18:
                case T__19:
                case T__20:
                case T__21:
                case IntConst:
                case FloatConst:
                case Ident:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(216);
                    stmt();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StmtContext stmt() throws RecognitionException {
        StmtContext _localctx = new StmtContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_stmt);
        int _la;
        try {
            setState(258);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 25, _ctx)) {
                case 1:
                    _localctx = new AssignmentContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(219);
                    lVal();
                    setState(220);
                    match(T__5);
                    setState(221);
                    exp();
                    setState(222);
                    match(T__2);
                }
                break;
                case 2:
                    _localctx = new ExpStmtContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(225);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (((_la) & ~0x3f) == 0 && ((1L << _la) & 120266426368L) != 0) {
                        {
                            setState(224);
                            exp();
                        }
                    }

                    setState(227);
                    match(T__2);
                }
                break;
                case 3:
                    _localctx = new BlockStmtContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(228);
                    block();
                }
                break;
                case 4:
                    _localctx = new IfStmtContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(229);
                    match(T__13);
                    setState(230);
                    match(T__10);
                    setState(231);
                    cond();
                    setState(232);
                    match(T__11);
                    setState(233);
                    stmt();
                }
                break;
                case 5:
                    _localctx = new IfelseStmtContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(235);
                    match(T__13);
                    setState(236);
                    match(T__10);
                    setState(237);
                    cond();
                    setState(238);
                    match(T__11);
                    setState(239);
                    stmt();
                    setState(240);
                    match(T__14);
                    setState(241);
                    stmt();
                }
                break;
                case 6:
                    _localctx = new WhileStmtContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                {
                    setState(243);
                    match(T__15);
                    setState(244);
                    match(T__10);
                    setState(245);
                    cond();
                    setState(246);
                    match(T__11);
                    setState(247);
                    stmt();
                }
                break;
                case 7:
                    _localctx = new BreakStmtContext(_localctx);
                    enterOuterAlt(_localctx, 7);
                {
                    setState(249);
                    match(T__16);
                    setState(250);
                    match(T__2);
                }
                break;
                case 8:
                    _localctx = new ContinueStmtContext(_localctx);
                    enterOuterAlt(_localctx, 8);
                {
                    setState(251);
                    match(T__17);
                    setState(252);
                    match(T__2);
                }
                break;
                case 9:
                    _localctx = new ReturnStmtContext(_localctx);
                    enterOuterAlt(_localctx, 9);
                {
                    setState(253);
                    match(T__18);
                    setState(255);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (((_la) & ~0x3f) == 0 && ((1L << _la) & 120266426368L) != 0) {
                        {
                            setState(254);
                            exp();
                        }
                    }

                    setState(257);
                    match(T__2);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpContext exp() throws RecognitionException {
        ExpContext _localctx = new ExpContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_exp);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(260);
                addExp(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final CondContext cond() throws RecognitionException {
        CondContext _localctx = new CondContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_cond);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(262);
                lOrExp(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final LValContext lVal() throws RecognitionException {
        LValContext _localctx = new LValContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_lVal);
        try {
            int _alt;
            setState(274);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 27, _ctx)) {
                case 1:
                    _localctx = new ScalarLValContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(264);
                    match(Ident);
                }
                break;
                case 2:
                    _localctx = new ArrLValContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(265);
                    match(Ident);
                    setState(270);
                    _errHandler.sync(this);
                    _alt = 1;
                    do {
                        switch (_alt) {
                            case 1: {
                                {
                                    setState(266);
                                    match(T__6);
                                    setState(267);
                                    exp();
                                    setState(268);
                                    match(T__7);
                                }
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                        setState(272);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 26, _ctx);
                    } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final PrimaryExpContext primaryExp() throws RecognitionException {
        PrimaryExpContext _localctx = new PrimaryExpContext(_ctx, getState());
        enterRule(_localctx, 38, RULE_primaryExp);
        try {
            setState(282);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__10:
                    _localctx = new PrimaryExp1Context(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(276);
                    match(T__10);
                    setState(277);
                    exp();
                    setState(278);
                    match(T__11);
                }
                break;
                case Ident:
                    _localctx = new PrimaryExp2Context(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(280);
                    lVal();
                }
                break;
                case IntConst:
                case FloatConst:
                    _localctx = new PrimaryExp3Context(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(281);
                    number();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final NumberContext number() throws RecognitionException {
        NumberContext _localctx = new NumberContext(_ctx, getState());
        enterRule(_localctx, 40, RULE_number);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(284);
                _la = _input.LA(1);
                if (!(_la == IntConst || _la == FloatConst)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final UnaryExpContext unaryExp() throws RecognitionException {
        UnaryExpContext _localctx = new UnaryExpContext(_ctx, getState());
        enterRule(_localctx, 42, RULE_unaryExp);
        int _la;
        try {
            setState(296);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 30, _ctx)) {
                case 1:
                    _localctx = new UnaryExp1Context(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(286);
                    primaryExp();
                }
                break;
                case 2:
                    _localctx = new UnaryExp2Context(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(287);
                    match(Ident);
                    setState(288);
                    match(T__10);
                    setState(290);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (((_la) & ~0x3f) == 0 && ((1L << _la) & 257705379840L) != 0) {
                        {
                            setState(289);
                            funcRParams();
                        }
                    }
